--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ body {
 /* header */
 
 .container-header {
-    height: 180px;
+    height: 50px;
     overflow: hidden;
     position: fixed;
     top: 0;
@@ -33,31 +33,36 @@ body {
     /* text-decoration: underline overline double; */
 }
 
+.header-items {    
+    text-align: center;
+    
+}
+
+.header-logo {
+    height: 40px;
+}
+
 .header-item {
     padding:8px 8px;
+    height: 50px;
+    vertical-align: middle;
+    display: inline-block;
 }
 
 .container-header div {
-    margin-left: 200px;
     width: 100%;
 }
 
 
-.header-logo {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    margin-top: auto;
-    margin-bottom: auto;
-    margin-left: 10px; 
-    height: auto;
-}
-
 .container-all {
-    margin-top: 180px;
+    margin-top: 100px;
 }
 
-
+@media screen and (max-width: 1049px) {
+    .news-description {
+        width: calc(100% - 400px);
+    }
+}
 
 /* all sections */
 
