JS3-text animation

--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,10 @@ body {
     /* text-decoration: underline overline double; */
     
 }
-
+.ml3 {
+    font-weight: 900;
+    font-size: 3.5em;
+  }
 .grey-section{
     background-color: lightgray;
 }
